[feat] JWT 인증 절차 프론트엔드와 백엔드 통합